--- a/results.scss
+++ b/results.scss
@@ -234,7 +234,7 @@
   flex-direction: column;
   margin-bottom: 5px;
   background-color: #F0F3F4;
-  padding: 0.5rem 1rem 0.5rem 1rem;
+  padding: 0.5rem 1rem;
   border-radius: 40px;
 }
 
